--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
 <!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/font-awesome.css">
+  <link rel="stylesheet" href="css/animate.css">
+</head>
+
+<body>
+  <div class="wrapper">
+
+
+  </div>
+
+</body>
+</html>
